--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Jwing28/myBooks#readme",
   "dependencies": {
     "express": "^4.14.0",
+    "firebaseui": "^1.0.0",
     "mongoose": "^4.7.1",
     "node": "0.0.0"
   }
