--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   "dependencies": {
     "express": "^4.14.0",
     "firebaseui": "^1.0.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
     "mongoose": "^4.7.1",
-    "node": "0.0.0"
+    "node": "0.0.0",
+    "phantomjs": "^2.1.7"
   }
 }
